--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
+    "reinstall": "bash ./scripts/reinstall.sh",
     "test": "jest --runInBand --coverage"
   },
   "dependencies": {
     "axios": "^1.5.0",
     "botbuilder": "^4.20.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.21.2"
   },
   "devDependencies": {
     "jest": "^29.7.0",
